# ida-ios-helper

./: .gitignore  README.md  ida-plugin.json  ida_plugin_stub.py  pyproject.toml
.claude/skills/probe-ida-function/: SKILL.md
src/: ida_plugin.py  plugin.py
src/ioshelper/: __init__.py  core.py  ida_plugin.py
src/ioshelper/base/: reloadable_plugin.py  utils.py
src/ioshelper/plugins/common/: globals.py  run_callback.py
src/ioshelper/plugins/common/clang_blocks/: __init__.py  analyze_byref_args.py  block.py  utils.py
src/ioshelper/plugins/common/jump_to_string/: __init__.py  jump_to_string.py
src/ioshelper/plugins/common/outline/: __init__.py
src/ioshelper/plugins/common/range_condition/: __init__.py  range_condition.py
src/ioshelper/plugins/common/segment_xrefs/: __init__.py  segment_xrefs.py
src/ioshelper/plugins/kernelcache/cpp_vtbl/: __init__.py
src/ioshelper/plugins/kernelcache/func_renamers/: __init__.py  external.py  func_renamers.py  pac_applier.py  renamer.py
src/ioshelper/plugins/kernelcache/generic_calls_fix/: __init__.py  generic_calls_fix.py
src/ioshelper/plugins/kernelcache/kalloc_type/: __init__.py  kalloc_type.py
src/ioshelper/plugins/kernelcache/obj_this/: __init__.py  obj_this.py
src/ioshelper/plugins/objc/objc_ref/: __init__.py  objc_ref.py
src/ioshelper/plugins/objc/objc_refcnt/: __init__.py  optimizer.py
src/ioshelper/plugins/objc/objc_sugar/: __init__.py  objc_sugar.py
src/ioshelper/plugins/objc/oslog/: __init__.py  error_case_optimizer.py  log_enabled_optimizer.py  log_macro_optimizer.py  os_log.py
src/ioshelper/plugins/swift/: swift_adjust_frame_size.py
src/ioshelper/plugins/swift/swift_dump_import/: __init__.py  config.py  importer.py  parser.py  swift_types_map.py
src/ioshelper/plugins/swift/swift_oslog/: __init__.py  log_hook.py  log_type_getters.py
src/ioshelper/plugins/swift/swift_strings/: __init__.py  swift_string.py  swift_string_fixup.py
src/ioshelper/plugins/swift/swift_types/: __init__.py  prolog_rewrite.py  swift_types.py
src/objchelper/: core.py
src/objchelper/base/: reloadable_plugin.py
src/objchelper/idahelper/: cpp.py  pac.py  tif.py
src/objchelper/idahelper/ast/: lvars.py
src/objchelper/idahelper/microcode/: visitors.py
src/objchelper/plugins/common/: run_callback.py
src/objchelper/plugins/common/clang_blocks/: __init__.py  analyze_byref_args.py  block_arg_byref.py  optimize_blocks_init.py  utils.py
src/objchelper/plugins/common/jump_to_string/: jump_to_string.py
src/objchelper/plugins/common/outline/: __init__.py  outline.py
src/objchelper/plugins/common/range_condition/: range_condition.py
src/objchelper/plugins/common/segment_xrefs/: __init__.py  segment_xrefs.py
src/objchelper/plugins/kernelcache/cpp_vtbl/: cpp_vtbl.py
src/objchelper/plugins/kernelcache/func_renamers/: __init__.py  fast_pac.py  handlers.py  pac_applier.py  renamer.py  visitor.py
src/objchelper/plugins/kernelcache/generic_calls_fix/: generic_calls_fix.py
src/objchelper/plugins/kernelcache/kalloc_type/: __init__.py  kalloc_type.py
src/objchelper/plugins/kernelcache/obj_this/: __init__.py
src/objchelper/plugins/objc/objc_refcnt/: optimizer.py
src/scripts/: field_search.py  fix_dyld_xrefs.py  idat_ipc_client.py  idat_ipc_launch.sh  idat_ipc_server.py  probe_func.py  probe_func.sh
(+2 files in other folders)
