[project]
name = "ida-objc-helper"
version = "0.1.0"
description = "IDA Plugin for ease the reversing of iOS' usermode and kernelcache."
authors = [
    { name = "Yoav Sternberg", email = "yoav.sternberg@gmail.com" },
]
readme = "README.md"
repository = "https://github.com/yoavst/ida-ios-helper"

requires-python = ">=3.10"
dependencies = [
    "idahelper==1.0.8",
]

[project.urls]
Homepage = "https://github.com/yoavst/ida-ios-helper"
Issues = "https://github.com/yoavst/ida-ios-helper/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "vermin>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/objchelper"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Asserts
    "S101",
    # Name for classes
    "N801",
    # Custom error classes
    "TRY003"
]

[tool.ruff.format]
preview = true
